server/public/sass/screen.scss
/* Welcome to Compass.
 * In this file you should write your main styles. (or centralize your imports)
 * Import this file using the following HTML or equivalent: 
 * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */

@import "compass/reset";
@import "compass/css3";

* {
  box-sizing: border-box;
}

/* latin-ext */
@font-face {
  font-family: 'Ropa Sans';
  font-style: normal;
  font-weight: 400;
  src: local('Ropa Sans Regular'), local('RopaSans-Regular'), url('/fonts/ropa-sans-regular-ext.woff2') format('woff2');
  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
}
/* latin */
@font-face {
  font-family: 'Ropa Sans';
  font-style: normal;
  font-weight: 400;
  src: local('Ropa Sans Regular'), local('RopaSans-Regular'), url('/fonts/ropa-sans-regular.woff2') format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
}

$primary: #58b69e;
$secondary: #102c42;

html, body {
  background-image: url('/img/background.jpg');
  background-size: cover;
  background-position: 50% 50%;
  background-repeat: no-repeat;
  height: 100%;
  width: 100%;
  margin: 0; 
  padding: 0;
}

body {
  font-family: "Ropa Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
  -webkit-font-smoothing: antialiased;
  overflow: scroll;
  background-color: #222;
}

a:hover {
  cursor: pointer;
}

.background {
  position: fixed;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  background-image: url('/img/background.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: 50% 50%;
}

#react-container {
  position: relative;
  z-index: 2;
}

main {
  width: 100%;
  height: 100%;
  padding-bottom: 20px;
}

.main-header {
  color: white;
  width: 640px;
  padding-top: 60px;
  margin: 0 auto 60px auto;
  h1 {
    float: left;
  }
  h1 span {
    display: inline-block;
    width: auto;
    background-color: $primary;
    font-size: 40px;
  }
  h1 span {
    padding: 12px 16px;
  }
  h2 {
    float: right;
    margin-right: -23px;
  }
  img {
    max-width: 350px;
    width: auto;
    height: 90px;
    margin: 25px;
  }
  &:after {
    content: "";
    clear: both;
    width: 100%;
    display: block;
  }
}

.main-footer {
  padding: 20px 0;
  color: white;
  left: 0;
  right: 0;
  width: auto;
  p {
    text-align: center;
    max-width: 640px;
    margin: 0 auto;
  }
  a {
    text-decoration: underline;
    color: inherit;
  }
}

.input {
  width: 100%;
  label {
    color: white;
    display: block;
    font-size: 32px;
    margin-bottom: 15px;
    font-weight: 200;
  }
  input {
    color: $primary;
    background-color: white;
    border: none;
    padding: 12px 16px;
    height: 50px;
    display: block;
    font-size: 22px;
    width: 100%;
  }
}

.autocomplete-input .rw-combobox {
  position: relative;
  overflow: hidden;
}

.autocomplete-input .rw-select.rw-btn {
  position: absolute;
  right: 0;
  top: 0;
  width: 50px;
  height: 50px;
  border: none;
  border-left: 1px solid rgba(0,0,0,0.3);
  font-family: sans-serif;
  background: white;
  color: #666;
  &:before {
    font-size: 24px;
    content: '▾';
  }
  &:hover {
    cursor: pointer;
  }
}

.autocomplete-input ul {
  background-color: white;
  color: $secondary;
  max-height: 483px;
  overflow: scroll;
  border-top: 1px solid rgba(0,0,0,0.3);
  width: 100%;
  li {
    padding: 12px 16px;
    font-size: 22px;
    width: 100%;
    &:hover, &.active, &.rw-state-focus {
      background-color: $primary;
      color: white;
      cursor: pointer;
    }
  }
}

.search, .results, .register {
   width: 600px;
   margin: 0 auto;
   position: relative;
   z-index: 2;
}

.register .input {
  margin-bottom: 20px;
}

.submit {
  width: 100%;
  padding: 15px;
  font: inherit;
  font-weight: 600;
  font-size: 32px;
  background-color: $secondary;
  border: none;
  color: white;
  text-transform: uppercase;
  position: relative;
  &:hover {
    cursor: pointer;
  }
  &:after {
    content: '';
    display: none;
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    z-index: 2;
    background-color: rgba(white, 0.1);
  }
  &:hover:after {
    display: block;
  }
  &.disabled, &.disabled:hover {
    color: rgba(white, 0.35);
    cursor: default;
  }
}

.results .loading {
  background-color: $secondary;
  margin-top: 10px;
  color: white;
  text-align: center;
  width: 100%;
  padding: 20px;
  font-style: italic;
}

.results .student {
  background-color: $secondary;
  color: white;
  margin-top: 10px;
  width: 100%;
  a {
    display: block;
    padding: 20px 30px;
    text-decoration: none;
    color: white;
    position: relative;
    &:hover {
      cursor: pointer;
    }
    &:after {
      content: '';
      display: none;
      position: absolute;
      left: 0;
      right: 0;
      top: 0;
      bottom: 0;
      z-index: 2;
      background-color: rgba(white, 0.1);
    }
    &:hover:after {
      display: block;
    }
  }
  h3 {
    font-size: 30px;
    margin-bottom: 14px;
  }
  h4 {
    font-size: 22px;
    img {
      width: 24px;
      height: auto;
      vertical-align: middle;
      margin-right: 5px;
    }
  }
  strong, em {
    text-transform: uppercase;
    font-weight: bold;
  }
  strong {
    color: $primary;
  }
}

@media screen and (max-width: 680px) {
  main {
    padding: 40px;
  }
  .main-header {
    padding-top: 0;
    margin-top: 0;
    margin-bottom: 20px;
  }
  .main-header, .search, .results, .register {
    width: 100%
  }
}

@media screen and (max-width: 650px) {
  .main-header h2 {
    display: block;
    width: 100%;
    margin-right: 0;
    margin-top: 20px;
    position: relative;
    left: -23px;
  }
}

@media screen and (max-width: 540px) {
  .main-footer p {
    max-width: 315px;
    margin-top: 8px;
  }
}

@media screen and (max-width: 440px) {
  main {
    padding: 20px;
  }
  .main-header h2 {
    img {
      max-width: 228px;
      height: 58px;
      margin: 16px;
    }
  }
  .input {
    label {
      font-size: 24px;
      margin-bottom: 5px;
    }
    input {
      padding: 12px 16px;
      font-size: 18px;
    }
  }
  .autocomplete-input ul li {
    font-size: 18px;
  }
  .results .student {
    a {
      padding: 10px;
    }
    h3 {
      font-size: 22px;
      margin-bottom: 8px;
    }
    h4 {
      font-size: 16px;
    }
  }
}

